# wap

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .editorconfig  .env  .flake8  .gitignore  .markdownlint.json  .mypy.ini  .pre-commit-config.yaml  .prettierrc.json  .readthedocs.yaml  .wap.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.md  Makefile  README.md  README.rst  TODO.md  action.yml  example.toc  mkdocs.yml  pyproject.toml  wap.json
.github/actions/: install-deps.yml
.github/actions/wap/: action.yml
.github/workflows/: build-docs.yml  ci.yml  pages.yml
action/: Dockerfile  entrypoint.sh
ci/: poetry-requirements.in  poetry-requirements.txt
docs/: CONTRIBUTING.rst  commands.md  commands.rst  conf.py  config.rst  configuration.md  contributing.md  contributing.rst  contributors.md  five-minutes.rst  getting-started.md  gh-action.md  index.rst  installation.md  installation.rst  license.rst  project-structure.md  project-structure.rst  terms.rst  toc-gen.md  toc-gen.rst  wap-config.rst  wap-for-collaborators.md  wap.ahk  why.rst
docs-old/: config.rst  contributing.rst  index.rst  terms.rst  toc-gen.rst  wap.ahk  wowtoclexer.py
docs-old/_static/css/: better-kbd.css
docs/commands/: build.md  config.md  help.md  new-config.md  new-project.md  publish.md  validate.md
docs/scripts/: clean-ahk.py  wap.ahk
docs/stylesheets/: extra.css
schema/: wap.schema.json
scripts/: update_schema.py
src/wap/: __init__.py  __main__.py  config.py  console.py  core.py  curseforge.py  exception.py  fileops.py  prompt.py  toc.py  wow.py
src/wap/commands/: base.py  build.py  config.py  new_config.py  new_project.py  publish.py  util.py  validate.py
src/wap/schema/: wap.schema.json
src/wap/versions/: latest.json
tests/: cmd_util.py  conftest.py  curseforge_request.py  fixtures.py  test_build.py  test_cli.py  test_config.py  test_curseforge.py  test_dev_install.py  test_help.py  test_log.py  test_main.py  test_new_config.py  test_new_project.py  test_package.py  test_prompt.py  test_publish.py  test_quickstart.py  test_toc.py  test_upload.py  test_validate.py  test_watch.py  util.py
tests/fixture/: config.py  curseforge.py  fsenv.py  time.py
tests/fixture/data/addons/basic/: Main.lua
tests/fixture/data/output_dirs/basic/Package-1.2.3/Addon/: Addon.toc  Addon_Classic.toc  Addon_Mainline.toc  Addon_Vanilla.toc  Addon_Wrath.toc  Extra.lua
tests/fixtures/: __init__.py
tests/fixtures/configs/: basic.yml  curseforge_changelog_case_insensitive_ext.yml  curseforge_changelog_does_not_exist.yml  curseforge_changelog_html.yml  curseforge_changelog_markdown_long_ext.yml  curseforge_changelog_not_relative.yml  curseforge_changelog_not_set.yml  curseforge_changelog_txt.yml  curseforge_changelog_unknown_ext.yml  dir_path_does_not_exist.yml  dir_path_is_file.yml  dir_path_not_relative.yml  dir_paths_not_unique.yml  does_not_follow_schema.yml  multi_dir_one_not_exist.yml  no_curseforge.yml  toc_custom_tag_too_long.yml  toc_custom_tag_without_prefix.yml  toc_file_does_not_exist.yml  toc_file_is_dir.yml  toc_file_not_relative.yml  toc_overwritten_common_tag.yml  toc_overwritten_interface_tag.yml  toc_overwritten_version_tag.yml  toc_tags_localized.yml  toc_tags_non_utf_8.yml  toc_tags_secure.yml  toc_tags_unknown_localizations.yml  version_bad_format.yml  version_does_not_exist_on_cf.yml  version_duplicated_version.yml  version_only_classic.yml  version_only_retail.yml  version_too_many_classic.yml  version_too_many_retail.yml
tests/fixtures/project_dirs/basic_built_version_1.2.3/: CHANGELOG.md
tests/fixtures/project_dirs/non_utf_8_changelog/: CHANGELOG.md
tests/fixtures/project_dirs/with_existing_toc_file/Dir1/: Dir1.toc
tests/test_addon/: .wap.yml  CHANGELOG.md  README.md
tests/test_addon/LibMoneyPrinter/: API.lua
tests/test_addon/MoneyPrinter/: Core.lua
wap/: __main__.py  addon.py  addonspath.py  changelog.py  cli.py  config.py  curseforge.py  exception.py  guided_config.py  log.py  package.py  result.py  toc.py  util.py  watcher.py  wowversion.py
wap/commands/: __init__.py  base.py  build.py  common.py  dev_install.py  new_config.py  package.py  quickstart.py  upload.py  validate.py  watch.py
