[tool.poetry]
name = "wow-addon-packager"
version = "0.10.9"
description = "A developer-friendly World of Warcraft addon packager"
authors = ["Tim Martin <tim@timmart.in>"]
license = "MIT"
readme = "README.md"
keywords = ["World of Warcraft", "WoW", "Addons"]
homepage = "https://github.com/t-mart/wap"
repository = "https://github.com/t-mart/wap"
documentation = "https://t-mart.github.io/wap/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
packages = [
    { include = "wap", from = "src" },
]

[tool.poetry.scripts]
wap = 'wap.__main__:main'

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
arrow = "^1.2.3"
attrs = "^22.1.0"
jsonschema = "^4.15.0"
httpx = "^0.23.0"
rich = "^12.5.1"
watchfiles = "^0.16.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.1.3"
flake8 = "^5.0.4"
isort = "^5.10.1"
freezegun = "^1.2.2"
respx = "^0.19.3"
glom = "^22.1.0"
multipart = "^0.2.4"
mkdocs-material = "^8.5.2"
# NOTE: this pygments source should be replaced once the wowtoc lexer
# support is released. See https://github.com/pygments/pygments/pull/2244
pygments = {git = "https://github.com/pygments/pygments", rev = "fccb16b"}
pre-commit = "^2.20.0"
twine = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    # importlib is recommended, but broken when reading conftest
    # https://github.com/pytest-dev/pytest/issues/9645
    # "--import-mode=importlib",
    "--strict-config",
    "--strict-markers"
]
testpaths = "tests"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
follow_imports_for_stubs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
# disallow_any_unimported = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "multipart",
    "glom",
    "jsonschema"
]
ignore_missing_imports = true
