[tool.poetry]
name = "wow-addon-packager"
version = "0.11.3"
description = "A developer-friendly World of Warcraft addon packager"
authors = ["Tim Martin <tim@timmart.in>"]
license = "MIT"
readme = "README.md"
keywords = ["World of Warcraft", "WoW", "Addons"]
homepage = "https://github.com/t-mart/wap"
repository = "https://github.com/t-mart/wap"
documentation = "https://t-mart.github.io/wap/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
packages = [
    { include = "wap", from = "src" },
]

[tool.poetry.scripts]
wap = 'wap.__main__:main'

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
arrow = "^1.3.0"
attrs = "^23.2.0"
jsonschema = "^4.21.1"
rich = "^13.7.1"
watchfiles = "^0.21.0"
respx = "^0.20.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
freezegun = "^1.4.0"
glom = "^23.5.0"
multipart = "^0.2.4"
mkdocs-material = "^9.5.13"
pre-commit = "^3.6.2"
twine = "^5.0.0"
# NOTE: this pygments source should be replaced once the wowtoc lexer
# support is released. See https://github.com/pygments/pygments/pull/2244
pygments = "^2.17.2"
ruff = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    # importlib is recommended, but broken when reading conftest
    # https://github.com/pytest-dev/pytest/issues/9645
    # "--import-mode=importlib",
    "--strict-config",
    "--strict-markers"
]
testpaths = "tests"

[tool.ruff]
line-length = 88
