[project]
name = "wow-addon-packager"
version = "0.13.0"
description = "A developer-friendly World of Warcraft addon packager"
readme = "README.md"
license = "MIT"
dependencies = [
    "arrow>=1.3.0",
    "attrs>=24.3.0",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "jsonschema>=4.23.0",
    "respx>=0.22.0",
    "rich>=13.9.4",
    "watchfiles>=1.0.4",
]
keywords = ["World of Warcraft", "WoW", "Addons"]
homepage = "https://github.com/t-mart/wap"
repository = "https://github.com/t-mart/wap"
documentation = "https://t-mart.github.io/wap/"
authors = [
    {name = "Tim Martin", email = "tim@timmart.in"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">= 3.13"

[project.scripts]
wap = "wap.__main__:main"

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "glom>=24.11.0",
    "mkdocs-material>=9.5.50",
    "multipart>=1.2.1",
    "pre-commit>=4.0.1",
    "pygments>=2.19.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "twine>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wap"]